syntax = "proto3";

package shoppy_backend;
option go_package = "./";

/**
 * Services
 */
service ProductOperations {
  rpc FetchProducts (FetchProductsRequest) returns (FetchProductsResponse) {}
  rpc FetchProduct (FetchProductRequest) returns (FetchProductResponse) {}
}

/**
 * Data Objects
 */
message ProductEntity {
  int32 id = 1;
  string name = 2;
  string image = 3;
  float price = 4;
  int32 stock = 5;
  string description = 6;
}

message CategoryEntity {
  int32 id = 1;
  string name = 2;
}

message ProductsPageData {
  repeated ProductEntity products = 1;
  repeated CategoryEntity categories = 2;
  int32 pages = 3;
}

/**
 * Requests
 */
message FetchProductsRequest {
  int32 category_id = 2;
  string search_keyword = 3;
  int32 page = 4;
}

message FetchProductRequest {
  int32 id = 1;
}

/**
 * Responses
 */
message FetchProductsResponse {
  bool status = 1;
  string message = 2;
  ProductsPageData data = 3;
}

message FetchProductResponse {
  bool status = 1;
  string message = 2;
  ProductEntity data = 3;
}